<resources>
    <string name="app_name">Puzzle</string>
    <string name="about">About</string>
    <string name="level_1">level_1</string>
    <string name="level_2">level_2</string>
    <string name="level_3">level_3</string>
    <string name="standard">standard</string>
    <string name="hard">hard</string>
    <string name="menu">menu</string>
    <string name="sound_button_description">Turning sound off and on</string>
    <string name="hide">hide</string>
    <string name="win">win</string>
    <string name="volume">volume</string>
    <string name="reward">Unfortunately, you don’t have an internet connection and we can’t show your reward :(</string>
    <string name="Professor">Professor: Kuznetsov Andrei Nikolaevich</string>
    <string name="Developer">Developer: Pavlov Daniil Vyacheslavovich</string>
    <string name="GameName">Puzzle game</string>
    <string name="versionGame">Game Version: 2.8</string>
    <string name="Organization">Organization: Peter the Great St.Petersburg Polytechnic University</string>

</resources>
