<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/GameName"
        android:textColor="@color/cardview_dark_background"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/organization"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="right"
        android:text="@string/Organization"
        android:textColor="@color/cardview_dark_background"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/professor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="right"
        android:text="@string/Professor"
        android:textColor="@color/cardview_dark_background"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="right"
        android:text="@string/Developer"
        android:textColor="@color/cardview_dark_background"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/versionGame" />

</LinearLayout>